k8s/waves-voting-stage/waves-voting-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waves-voting-ui-deployment
  namespace: waves-voting-stage
  labels:
    app: waves-voting-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      role: waves-voting-ui
      environment: stage
  template:
    metadata:
      labels:
        role: waves-voting-ui
        environment: stage
    spec:
      containers:
      - name: waves-voting-ui
        image: registry.gitlab.com/trustamust/waves-voting-ui:1.2.0
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: gitlab-auth
---
apiVersion: v1
kind: Service
metadata:
  name: waves-voting-ui
  namespace: waves-voting-stage
  labels:
    name: waves-voting-ui
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: None
  selector:
    role: waves-voting-ui
    environment: stage
