k8s/waves-voting-stage/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: waves-voting-stage
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - stage.trustamust.com
    secretName: letsencrypt-prod
  rules:
  - host: stage.trustamust.com
    http:
      paths:
      - path: /api/v1
        backend:
          serviceName: waves-voting-api
          servicePort: 8080
      - path: /admin/api/v1
        backend:
          serviceName: waves-voting-api
          servicePort: 8080
      - path: /
        backend:
          serviceName: waves-voting-ui
          servicePort: 80
